--- a/blog_musica/index.html
+++ b/blog_musica/index.html
@@ -12,24 +12,50 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="fondo col-lg-12 col-md-12 col-sm-12 col-12">
-				<div class="row">
-					<div class="logo col-lg-3 col-md-5 col-sm-6 col-5 text-center">
-						<img src="image/music-city.png" alt="MusicaPop" class="img-logo">
-					</div>
-					<div class="col-lg-9 col-md-7 col-sm-6 col-7 text-center">
-						<div class="redes-sociales float-lg-right float-md-right float-sm-right float-right">
-							<div class="texto">Encuentranos en: </div>
+			<div class="row">
+				<div class="logo col-lg-3 col-md-5 col-sm-6 col-5 text-center">
+					<img src="image/music-city.png" alt="MusicaPop" class="img-logo">
+				</div>
+				<div class="col-lg-9 col-md-7 col-sm-6 col-7 text-center">
+					<div class="redes-sociales float-lg-right float-md-right float-sm-right float-right float-right">
+						<div class="texto">Encuentranos en: </div>
 							<img class="rounded img-social circle" src="image/fb.png" alt="Facebook" title="Facebook">
 							<img class="rounded img-social" src="image/tt.png" alt="Twitter" title="Twitter">
 							<img class="rounded img-social" src="image/ig.png" alt="Instagram" title="Instagram">
-						</div>
 					</div>
-				</div>				
+				</div>
+			</div>				
 			</div>
 		</div>
 	</div>
+
 	</header>
-
-
+	
+	<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top justify-content-center">
+		<div class="container">
+		<div class="navbar-collapse">
+			<ul class="navbar-nav mr-center">
+			<li class="navbar-item active">
+				<a href="#" class="nav-link">INICIO</a>
+			</li>
+			<li class="navbar-item">
+				<a href="#" class="nav-link">ARTISTAS</a>
+			</li>
+			<li class="navbar-item">
+				<a href="#" class="nav-link">GRUPOS</a>
+			</li>
+			<li class="navbar-item">
+				<a href="#" class="nav-link">TOP 10</a>
+			</li>
+			<li class="navbar-item">
+				<a href="#" class="nav-link">LETRAS</a>
+			</li>
+			<li class="navbar-item">
+				<a href="#" class="nav-link">ACORDES</a>
+			</li>
+		</ul>
+		</div>
+		</div>
+	</nav>
 </body>
 </html>
