--- a/blog_musica/index.html
+++ b/blog_musica/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blog Musicos y Canciones</title>
+	<title>Music City - SongStar</title>
 	<meta name="viewport" content="width:device-width, initial-scale=1, maximum-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/mis_estilos.css">
