--- a/blog_musica/index.html
+++ b/blog_musica/index.html
@@ -66,7 +66,7 @@
 						</h3>
 					</div>
 				</div>
-				<div class="row shadow p-3 mb-3 bg-white border-top">
+				<div class="row shadow p-3 mt-1 mb-3 bg-white border-top">
 					<div class="col-lg-9 col-md-7 col-sm-12 col-12">
 						<h4 class="card-title">Ed Sheeran</h4>
 						<p class="text-justify">
@@ -138,12 +138,38 @@
 			</div>
 			
 			<div class="col col-lg-3 col-md-12 col-sm-12 col-12 my-1 shadow p-3 mb-3 bg-white rounded">	
-				<h1>parrafo 2</h1>
+				<div class="row">
+					<div class="shadow px-3 mb-1 bg-white col-12">
+						<div class="input-group mb-2">
+						    <input type="text" class="form-control" id="nombre" placeholder="Buscar...">
+						    <div class="input-group-prepend">
+						        <div class="input-group-text rounded-right"><img src="image/icon-search.png" alt="Search" class="icon"></div>
+						    </div>
+						</div>
+					</div>
+					<div class="col-12 shadow p-3 mb-1 bg-white">
+						<ul class="list-group list-group-flush">
+						  <li class="list-group-item">Rock de los 80´s</li>
+						  <li class="list-group-item">Rock de los 90´s</li>
+						  <li class="list-group-item">Rock actual</li>
+						  <li class="list-group-item">Románticas</li>
+						  <li class="list-group-item">Acústicos</li>
+						  <li class="list-group-item">Pop Music</li>
+						  <li class="list-group-item">Bachatas</li>
+						  <li class="list-group-item">Regaeton</li>
+						  <li class="list-group-item">Ed sheeran</li>
+						  <li class="list-group-item">Maroom 5</li>
+						  <li class="list-group-item">Dady Yanque</li>
+						  <li class="list-group-item">Farruko</li>
+						  <li class="list-group-item">One Direction</li>
+						  <li class="list-group-item">Passengger</li>
+						  <li class="list-group-item">Marc Anthonny</li>
+						  <li class="list-group-item">Reik</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		
 	</div>
 </body>
 </html>
