--- a/blog_musica/index.html
+++ b/blog_musica/index.html
@@ -140,12 +140,14 @@
 			<div class="col col-lg-3 col-md-12 col-sm-12 col-12 my-1 shadow p-3 mb-3 bg-white rounded">	
 				<div class="row">
 					<div class="shadow px-3 mb-1 bg-white col-12">
-						<div class="input-group mb-2">
-						    <input type="text" class="form-control" id="nombre" placeholder="Buscar...">
-						    <div class="input-group-prepend">
-						        <div class="input-group-text rounded-right"><img src="image/icon-search.png" alt="Search" class="icon"></div>
-						    </div>
-						</div>
+						<form action="hola.html">
+							<div class="input-group mb-2">
+							    <input type="text" class="form-control" id="nombre" placeholder="Buscar...">
+							    <div class="input-group-prepend">
+							        <button type="submit" class="input-group-text rounded-right"><img src="image/icon-search.png" alt="Search" class="icon"></button type="submit">
+							    </div>
+							</div>
+						</form>
 					</div>
 					<div class="col-12 shadow p-3 mb-1 bg-white">
 						<ul class="list-group list-group-flush">
