--- a/blog_viajes/index.html
+++ b/blog_viajes/index.html
@@ -49,7 +49,7 @@
 			<div class="row">
 				<div class="col l4 m4 s12">
 					<div class="row">
-						<div class="l12 m12 s12 center margin-bottom-3">
+						<div class="l12 m12 s12 center margin-bottom-4">
 							<img src="image/rio-janeiro.jpg" alt="rio-janeiro" class="z-depth-2 img-galeria-9"></div>
 						<div class="l12 m12 s12 center margin-bottom-4">
 							<img src="image/tijmajal.jpg" alt="tijmajal" class="z-depth-2 img-galeria-9">
@@ -75,16 +75,83 @@
 </div>
 <div class="row">	
 	<div class="borde col l8 m8 s12">
-	      <div class="card">
-		      <div class="card-image width-4">	
-				<img src="image/machu-picchu.jpg" alt="MachuPicchu">
-		      </div>
-		      <h1>	s</h1>
+	    <div class="card hoverable colapsable">
+	    	<div class="row">	
+				<div class="col l6 m12 s12">	
+					<div class="card-image">	
+						<img src="image/machu-picchu.jpg">
+		    		</div>
+				</div>
+				<div class="card-stacked">
+					<div class="card-content justify">
+						<div class="section">
+					    	<h5>Machu Picchu</h5>
+					    	<p class="display-inline teal text-darken-2 white-text z-depth-2">
+								Subido: 22 de Enero del 2020
+					    	</p> 
+					    	<p class="display-inline teal text-darken-2 white-text z-depth-2">Cuzco - Perú</p>
+					  	</div>
+					  	<div class="divider"></div>
+				        <p>La llaqta (ciudad) de Machupicchu es un centro político, religioso y administrativo inka, que incluye templos, andenes, viviendas y canales de agua.</p>
+				        <p>La llaqta (ciudad) de Machupicchu es un centro político, religioso y administrativo inka, que incluye templos, andenes, viviendas y canales de agua.</p>
+				        <p>Construida durante la primera mitad del siglo XV, Machupicchu está dividida en dos grandes zonas: la agrícola que comprende una vasta red de andenes o terrazas artificiales, y la urbana formada por diversas construcciones y plazas entre las cuales destacan los templos del Sol, de las Tres Ventanas, del cóndor y el templo principal.</p>
+				        <p>¡Visitar Machu Picchu no es tan difícil como parece! Ya sea por propia cuenta o con un tour; solo necesita realizar las reservas necesarias por internet. El día de su visita solo necesita viajar de Cusco a la estación Ollantaytambo y, desde allí, partir en tren hacia Aguas Calientes. En este pueblo se abordan los buses en dirección a la puerta de Machu Picchu.</p>
+			        </div>
+			        <div class="card-action">
+			          <div class="row">
+					    <form class="col s12" action="pagina.html">
+					      <div class="row">
+					        <div class="input-field col s12">
+					          <i class="material-icons prefix">account_circle</i>
+					          <input id="icon_prefix" type="text" class="validate" placeholder="Tu nombre">
+					        </div>
+					        <div class="input-field col s12">
+					          <i class="material-icons prefix">chat</i>
+					          <textarea name="tu_comentario" cols="30" rows="10" maxlength="350" placeholder="Escribe tu comentario..." class="h-100"></textarea>
+					        </div>
+					        <div class="input-field col s12">
+					         <button class="btn waves-effect waves-light right" type="submit" name="action">		Comentar
+							    <i class="material-icons right">send</i>
+							  </button>
+					        </div>
+					      </div>
+					    </form>
+					  </div>
+			        </div>
+			         <div class="card-action">
+			         	<ul class="collection">
+						    <li class="collection-item avatar">
+						      <img src="image/chica-1.jpg" alt="" class="circle">
+						      <span class="card-title fz-20">Miriam F.</span>
+						      <p>Machu Picchu es un buen lugar para hacer turismo. sus inmensas montañas te hacen vivir un momento único. Volveré allá en tres meses.</p>
+						    </li>
+						    <li class="collection-item avatar">
+						      <img src="image/chica-2.jpg" alt="" class="circle">
+						      <span class="card-title fz-20">Brenda A.</span>
+						      <p>Mi primera vez en Machu Picchu fue espectacular. Hubo mucha gente que lo visitaba, eso era de todos los dias. Estuve una semana allí, y no me arrepiento haber gastado mucho dinero. Lo disfruté. Les recomiendo que vayan, no se van a arrepentir.</p>
+						    </li>
+						    <li class="collection-item avatar">
+						      <img src="image/chico-1.jpg" alt="" class="circle">
+						      <span class="card-title fz-20">José M.</span>
+						      <p>Soy peruano y me enorgullece vivir en Cuzco, pero vivitar Machu Picchu es lo que me gustaria hacer muy pronto. Mis padres y yo estamos planeandolo desde hace meses pero ya falta poco. Machu Picchu, ¡allá vamos!.</p>
+						    </li>
+						</ul>
+			         </div>
+		    	</div>
 		    </div>
+	    </div>
 	</div>
+</div>
 	<div class="borde col l4 m4 s12">
 	</div>
 </div>
+
+
+
+
+
+
+
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="css/materialize.min.js"></script>	
 </body>
