--- a/blog_viajes/index.html
+++ b/blog_viajes/index.html
@@ -34,7 +34,9 @@
 		<i class="white-text text-darken-2 margin-left-2">"Donde viajar es un sueño y un placer..."</i>
 	</div>
 </div>
-<div class="contenido margin-top-2">
+
+<div class="contenedor width-98 margin-auto">
+<div class="contenido padding-top-2">
 	<div class="row">
 		<div class="col l1 m2 s2">
 			<div class="redes-sociales margin-top-2 center">
@@ -51,12 +53,12 @@
 					<div class="row">
 						<div class="l12 m12 s12 center margin-bottom-4">
 							<img src="image/rio-janeiro.jpg" alt="rio-janeiro" class="z-depth-2 img-galeria-9"></div>
-						<div class="l12 m12 s12 center margin-bottom-4">
+						<div class="l12 m12 s12 center">
 							<img src="image/tijmajal.jpg" alt="tijmajal" class="z-depth-2 img-galeria-9">
 						</div>
 					</div>
 				</div>
-				<div class="col l4 m4 s12 center margin-bottom-4">
+				<div class="col l4 m4 s12 center">
 					<img src="image/torre-eiffel.jpg" alt="TorreEiffel" class="z-depth-2 img-galeria-10 height-8">
 				</div>
 				<div class="col l4 m4 s12">
@@ -64,7 +66,7 @@
 						<div class="l12 m12 s12 center margin-bottom-4">
 							<img src="image/machu-picchu.jpg" alt="machu-pucchu" class="z-depth-2 img-galeria-9">
 						</div>
-						<div class="l12 m12 s12 center margin-bottom-4">
+						<div class="l12 m12 s12 center">
 							<img src="image/coliseo-romano.jpg" alt="coliseo-romano" class="z-depth-2 img-galeria-9">
 						</div>
 					</div>
@@ -74,7 +76,7 @@
 	</div>
 </div>
 <div class="row">	
-	<div class="borde col l8 m8 s12">
+	<div class="col l8 m8 s12">
 	    <div class="card hoverable colapsable">
 	    	<div class="row">	
 				<div class="col l6 m12 s12">	
@@ -141,17 +143,123 @@
 		    </div>
 	    </div>
 	</div>
-</div>
-	<div class="borde col l4 m4 s12">
+
+	<div class="col l4 m4 s12">
+		<div class="card hoverable colapsable">
+	    	<div class="row">	
+				<div class="col l12 m12 s12 center margin-top-2">	
+					<img src="image/47297535.jpg" class="circle width-150 z-depth-2">
+				</div>
+				<div class="card-stacked">
+					<div class="card-content justify">
+						<div class="section">
+					    	<h5 class="center">Cristian Ipanaqué</h5>
+					  	</div>
+					  	<div class="divider"></div>
+					  	<div class="container">
+					        <p>Soy un joven sullanero del departamento de Piura, Perú. Radicó allí desde que nací. Tengo 28 años de edad. Me gusta viajar y publicar todo acerca de los lugares a donde voy. Viajo solo o a veces con compañeros dispuestos a vivir una aventura sorprendente. Apuesto que también deseas viajar asi como yo.</p>
+					        <br>
+					        <p>Pues en esta sección encontrarás información acerca de los lugares que he conocido. Comenta tus expriencias e inquietudes. Si quieres contactarme en este <a href="mis-redes.html">link</a> encontrarás mis redes sociales.</p>
+					    </div>
+			        </div>
+		    	</div>
+		    </div>
+	    </div>
 	</div>
 </div>
 
+<div class="row">	
+	<div class="col l8 m8 s12">
+	    <div class="card hoverable colapsable">
+	    	<div class="row">	
+				<div class="col l6 m12 s12">	
+					<div class="card-image">	
+						<img src="image/rio-janeiro.jpg">
+		    		</div>
+				</div>
+				<div class="card-stacked">
+					<div class="card-content justify">
+						<div class="section">
+					    	<h5>Rio de Janeiro</h5>
+					    	<p class="display-inline teal text-darken-2 white-text z-depth-2">
+								Subido: 29 de Enero del 2020
+					    	</p> 
+					    	<p class="display-inline teal text-darken-2 white-text z-depth-2">Sao Paulo - Brasil</p>
+					  	</div>
+					  	<div class="divider"></div>
+				        <p>LCuando planees tu visita a la cima del Corcovado para conocer el Cristo Redentor, ten en cuenta que por la mañana tendrás la luz perfecta para poder tomar excelentes fotos de la ciudad, en cambio por la tarde tendrás el sol de frente.</p>
+				        <p>Las noches de Río a veces pueden ser frescas, sobre todo en las zonas más altas: si visitas el Pan de azúcar por la tarde o noche, ten siempre a mano una chaqueta. Además recuerda llevar tu tarjeta de estudiante para obtener un descuento.</p>
+				        <p>Visitar las playas de Río es imprescindible en tu viaje, pero evita pasar un mal rato y usa protección solar alta a toda hora.</p>
+			        </div>
+			        <div class="card-action">
+			          <div class="row">
+					    <form class="col s12" action="pagina.html">
+					      <div class="row">
+					        <div class="input-field col s12">
+					          <i class="material-icons prefix">account_circle</i>
+					          <input id="icon_prefix" type="text" class="validate" placeholder="Tu nombre">
+					        </div>
+					        <div class="input-field col s12">
+					          <i class="material-icons prefix">chat</i>
+					          <textarea name="tu_comentario" cols="30" rows="10" maxlength="350" placeholder="Escribe tu comentario..." class="h-100"></textarea>
+					        </div>
+					        <div class="input-field col s12">
+					         <button class="btn waves-effect waves-light right" type="submit" name="action">		Comentar
+							    <i class="material-icons right">send</i>
+							  </button>
+					        </div>
+					      </div>
+					    </form>
+					  </div>
+			        </div>
+			         <div class="card-action">
+			         	<ul class="collection">
+						    <li class="collection-item avatar">
+						      <img src="image/chico-2.jpg" alt="" class="circle">
+						      <span class="card-title fz-20">Gean V.</span>
+						      <p>Cristo Redentor es uno de los monumentos mas hermosos que he visto. El año pasado estuve alli. Es muy alto y muy magestuoso. Iré otra vez dentro de unos meses.</p>
+						    </li>
+						    <li class="collection-item avatar">
+						      <img src="image/chica-3.jpg" alt="" class="circle">
+						      <span class="card-title fz-20">Fátima E.</span>
+						      <p>Mi primera vez en Sao Paulo fue cuando era muy pequeña, no recuerdo mucho como fue. Mis padres me contaron que iremos nuevamente a visitar a unas tías que viven alli. Espero vivitar al cristo redentor y tomar muchas fotos.</p>
+						    </li>
+						    <li class="collection-item avatar">
+						      <img src="image/chico-3.jpg" alt="" class="circle">
+						      <span class="card-title fz-20">Fabricio M.</span>
+						      <p>Brasil es uno de los paises mas exóticos del mundo. Estuve alli viviendo y en muchas oportunidades vivité al cristo redentor. Ahora estoy viviendo en México, mi pais natal.</p>
+						    </li>
+						</ul>
+			         </div>
+		    	</div>
+		    </div>
+	    </div>
+	</div>
 
-
-
-
-
-
+	<div class="col l4 m4 s12">
+		<div class="card hoverable colapsable">
+	    	<div class="row">	
+				<div class="col l12 m12 s12 center margin-top-2">	
+					<img src="image/autor-perfil-1.jpg" class="circle width-150 z-depth-2">
+				</div>
+				<div class="card-stacked">
+					<div class="card-content justify">
+						<div class="section">
+					    	<h5 class="center">Gregory Matzer</h5>
+					  	</div>
+					  	<div class="divider"></div>
+					  	<div class="container">
+					        <p>Soy un joven de Jalisco, México. Tengo 22 años. Jalisco es un lugar muy bello y vivo allí desde que nací. Soy un alma libre que viaja y publico todo acerca de los lugares a donde voy. Viajo siempre en compañía y en todo lugar donde voy estan llenos de aventuras sorprendentes.</p>
+					        <br>
+					        <p>Vamos acompañame a mi proximo viaje ¡Paris! He oido mucho de ese lugar. Es uno de los mas modernos, especial para visitar. Iré con muchas personas, pues ya organicé mu grupo, pero aún puedes ir. Contactame <a href="mi-contacto.html">aquí</a></p>
+					    </div>
+			        </div>
+		    	</div>
+		    </div>
+	    </div>
+	</div>
+</div>
+</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="css/materialize.min.js"></script>	
 </body>
